Fix for mouse cursor not showing as pointer when hovering over article card elements

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
-#stream-link {
-  color: FFFF
+#nav-list {
+  text-align: right;
+}
+
+#cards:hover {
+  cursor: pointer;
 }
